Small changes to just-written tests